# tpm-multicast-client

./: README.md  build.py  pyproject.toml
.github/workflows/: docker.yml  release.yml  test.yml
cextern/include/: tpm.h  tpm_table.h
cextern/src/: tpmdgram.c  tpmtable.c
src/tpm_multicast_client/: __init__.py  __main__.py  client.py  server.py  unpack.py
tests/: test_unpack.py
tests/data/: unpack_test_data.py
